The graphs should go under the calorie counter, which also fixes the shadow.

--- a/style.less
+++ b/style.less
@@ -67,6 +67,7 @@ body {
     padding: 0.2em;
     font-size: 130%;
     box-shadow: 0 0 10px @shadow;
+    z-index: 1;
   }
   
   .homeView-dailyCalories {
